add github CI and maven surefire plugin